--- a/rl/correlated_datums.ipynb
+++ b/rl/correlated_datums.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO201ov3RNNELrk9BWReDTK",
+      "authorship_tag": "ABX9TyOA7onrlyyBSE2kKTnNNVep",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,150 @@
         "id": "ihhdsHihb4xj"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import itertools\n",
+        "from dataclasses import dataclass\n",
+        "from typing import Tuple, List, Optional\n",
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 (needed for 3D projection)\n",
+        "\n",
+        "\n",
+        "@dataclass\n",
+        "class RandomPolynomialDataGenerator:\n",
+        "    \"\"\"\n",
+        "    Generate synthetic data (X, y) from a randomly generated polynomial.\n",
+        "\n",
+        "    - Input: 1 or 2 variables (configurable via input_dim).\n",
+        "    - Output: 1 variable (y).\n",
+        "    - Output is: y = P(x) + noise, where P is a random polynomial.\n",
+        "    \"\"\"\n",
+        "    input_dim: int = 1          # 1 or 2\n",
+        "    degree: int = 3             # maximum total degree of the polynomial\n",
+        "    coeff_range: Tuple[float, float] = (-1.0, 1.0)\n",
+        "    x_range: Tuple[float, float] = (-1.0, 1.0)\n",
+        "    noise_std: float = 0.1\n",
+        "    random_state: Optional[int] = None\n",
+        "\n",
+        "    def __post_init__(self):\n",
+        "        if self.input_dim not in (1, 2):\n",
+        "            raise ValueError(\"input_dim must be 1 or 2\")\n",
+        "\n",
+        "        self.rng = np.random.default_rng(self.random_state)\n",
+        "        self.monomials = self._generate_monomials(self.input_dim, self.degree)\n",
+        "        self.coeffs = self._sample_coeffs()\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def _generate_monomials(input_dim: int, degree: int) -> List[Tuple[int, ...]]:\n",
+        "        \"\"\"\n",
+        "        Generate all exponent tuples (e1, ..., ed) such that:\n",
+        "            e1 + ... + ed <= degree and each ei >= 0.\n",
+        "        \"\"\"\n",
+        "        exponents = []\n",
+        "        for total_deg in range(degree + 1):\n",
+        "            # All non-negative integer solutions to sum(e) == total_deg\n",
+        "            # using product and filtering.\n",
+        "            for exp in itertools.product(range(total_deg + 1), repeat=input_dim):\n",
+        "                if sum(exp) == total_deg:\n",
+        "                    exponents.append(exp)\n",
+        "        return exponents\n",
+        "\n",
+        "    def _sample_coeffs(self) -> np.ndarray:\n",
+        "        low, high = self.coeff_range\n",
+        "        return self.rng.uniform(low, high, size=len(self.monomials))\n",
+        "\n",
+        "    def resample_polynomial(self):\n",
+        "        \"\"\"\n",
+        "        Resample the polynomial coefficients while keeping the same monomial structure.\n",
+        "        \"\"\"\n",
+        "        self.coeffs = self._sample_coeffs()\n",
+        "\n",
+        "    def _evaluate_polynomial(self, X: np.ndarray) -> np.ndarray:\n",
+        "        \"\"\"\n",
+        "        Evaluate the random polynomial at points X.\n",
+        "\n",
+        "        X: shape (n_samples, input_dim)\n",
+        "        Returns: y of shape (n_samples,)\n",
+        "        \"\"\"\n",
+        "        X = np.atleast_2d(X)\n",
+        "        if X.shape[1] != self.input_dim:\n",
+        "            raise ValueError(f\"Expected X with shape (n_samples, {self.input_dim}), got {X.shape}\")\n",
+        "\n",
+        "        y = np.zeros(X.shape[0], dtype=float)\n",
+        "        for coeff, exps in zip(self.coeffs, self.monomials):\n",
+        "            # Compute term = coeff * prod_j x_j ** exps[j]\n",
+        "            term = coeff * np.prod(X ** np.array(exps), axis=1)\n",
+        "            y += term\n",
+        "        return y\n",
+        "\n",
+        "    def random_sample(self, n_samples: int) -> Tuple[np.ndarray, np.ndarray]:\n",
+        "        \"\"\"\n",
+        "        Sample X and y from the random polynomial with Gaussian noise.\n",
+        "\n",
+        "        Returns:\n",
+        "            X: np.ndarray of shape (n_samples, input_dim)\n",
+        "            y: np.ndarray of shape (n_samples,)\n",
+        "        \"\"\"\n",
+        "        x_low, x_high = self.x_range\n",
+        "        X = self.rng.uniform(x_low, x_high, size=(n_samples, self.input_dim))\n",
+        "        y_clean = self._evaluate_polynomial(X)\n",
+        "        noise = self.rng.normal(loc=0.0, scale=self.noise_std, size=n_samples)\n",
+        "        y = y_clean + noise\n",
+        "        return X, y\n",
+        "\n",
+        "    def correlated_sample(self, n_samples, n_seeds, x_range_shrinkage: float = 0.1, linear: bool = False) -> Tuple[nd.ndarray, nd.ndarray]:\n",
+        "        x_low, x_high = self.x_range\n",
+        "        seeds_X = self.rng.uniform(x_low, x_high, size=(n_seeds, self.input_dim))\n",
+        "        num_samples_per_seed = n_samples // n_seeds\n",
+        "        diameter_around_seeds_X = ((x_high - x_low) * x_range_shrinkage) / 2\n",
+        "\n",
+        "\n",
+        "\n",
+        "def plot_polynomial_data(X: np.ndarray, y: np.ndarray, title: str = \"Synthetic Polynomial Data\"):\n",
+        "    \"\"\"\n",
+        "    Plot synthetic polynomial data.\n",
+        "\n",
+        "    - If X has shape (n_samples,) or (n_samples, 1): 2D scatter (x vs y).\n",
+        "    - If X has shape (n_samples, 2): 3D scatter (x1, x2 vs y).\n",
+        "\n",
+        "    Args:\n",
+        "        X: np.ndarray, shape (n_samples,) or (n_samples, 1 or 2)\n",
+        "        y: np.ndarray, shape (n_samples,)\n",
+        "        title: plot title\n",
+        "    \"\"\"\n",
+        "    X = np.asarray(X)\n",
+        "    y = np.asarray(y)\n",
+        "\n",
+        "    if X.ndim == 1:\n",
+        "        X = X.reshape(-1, 1)\n",
+        "\n",
+        "    if X.shape[0] != y.shape[0]:\n",
+        "        raise ValueError(\"X and y must have the same number of samples\")\n",
+        "\n",
+        "    if X.shape[1] == 1:\n",
+        "        # 2D scatter plot\n",
+        "        fig, ax = plt.subplots()\n",
+        "        ax.scatter(X[:, 0], y, alpha=0.7)\n",
+        "        ax.set_xlabel(\"x\")\n",
+        "        ax.set_ylabel(\"y\")\n",
+        "        ax.set_title(title)\n",
+        "        plt.show()\n",
+        "\n",
+        "    elif X.shape[1] == 2:\n",
+        "        # 3D scatter plot\n",
+        "        fig = plt.figure()\n",
+        "        ax = fig.add_subplot(111, projection=\"3d\")\n",
+        "        ax.scatter(X[:, 0], X[:, 1], y, alpha=0.7)\n",
+        "        ax.set_xlabel(\"x1\")\n",
+        "        ax.set_ylabel(\"x2\")\n",
+        "        ax.set_zlabel(\"y\")\n",
+        "        ax.set_title(title)\n",
+        "        plt.show()\n",
+        "\n",
+        "    else:\n",
+        "        raise ValueError(\"plot_polynomial_data only supports 1D or 2D inputs (input_dim 1 or 2).\")\n"
+      ]
     }
   ]
 }
