--- a/rl/correlated_datums.ipynb
+++ b/rl/correlated_datums.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOA7onrlyyBSE2kKTnNNVep",
+      "authorship_tag": "ABX9TyMkAkx6jz54NQrQf/O5iz+R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "ihhdsHihb4xj"
+        "id": "ihhdsHihb4xj",
+        "outputId": "fd957980-3154-4043-a85c-9e845e5b53dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 350
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'nd' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1025136588.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mdataclass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mRandomPolynomialDataGenerator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \"\"\"\n\u001b[1;32m     13\u001b[0m     \u001b[0mGenerate\u001b[0m \u001b[0msynthetic\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0ma\u001b[0m \u001b[0mrandomly\u001b[0m \u001b[0mgenerated\u001b[0m \u001b[0mpolynomial\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1025136588.py\u001b[0m in \u001b[0;36mRandomPolynomialDataGenerator\u001b[0;34m()\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0mcorrelated_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_seeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_range_shrinkage\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlinear\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mTuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m         \u001b[0mx_low\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_high\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx_range\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0mseeds_X\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_low\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_high\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_seeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'nd' is not defined"
+          ]
+        }
+      ],
       "source": [
         "import itertools\n",
         "from dataclasses import dataclass\n",
@@ -56,7 +74,7 @@
         "    degree: int = 3             # maximum total degree of the polynomial\n",
         "    coeff_range: Tuple[float, float] = (-1.0, 1.0)\n",
         "    x_range: Tuple[float, float] = (-1.0, 1.0)\n",
-        "    noise_std: float = 0.1\n",
+        "    noise_std: float = 0.001\n",
         "    random_state: Optional[int] = None\n",
         "\n",
         "    def __post_init__(self):\n",
@@ -125,15 +143,47 @@
         "        y = y_clean + noise\n",
         "        return X, y\n",
         "\n",
-        "    def correlated_sample(self, n_samples, n_seeds, x_range_shrinkage: float = 0.1, linear: bool = False) -> Tuple[nd.ndarray, nd.ndarray]:\n",
+        "    def correlated_sample(self, n_samples, n_seeds, x_range_shrinkage: float = 0.1, linear: bool = False) -> Tuple[np.ndarray, np.ndarray]:\n",
         "        x_low, x_high = self.x_range\n",
         "        seeds_X = self.rng.uniform(x_low, x_high, size=(n_seeds, self.input_dim))\n",
         "        num_samples_per_seed = n_samples // n_seeds\n",
-        "        diameter_around_seeds_X = ((x_high - x_low) * x_range_shrinkage) / 2\n",
+        "        maybe_samples_x = seeds_X.reshape(n_seeds, 1, self.input_dim)\n",
+        "        radius_around_seeds_X = ((x_high - x_low) * x_range_shrinkage) / 2\n",
+        "        samples_X = np.tile(seeds_X, (1, num_samples_per_seed, 1))\n",
+        "        if linear:\n",
+        "            frac = (np.arange(num_samples_per_seed) / (num_samples_per_seed - 1)).reshape(1, num_samples_per_seed, 1)\n",
+        "            seed_low = np.clip(\n",
+        "                samples_X - radius_around_seeds_X,\n",
+        "                x_low,\n",
+        "                x_high,\n",
+        "            )\n",
+        "            seed_high = np.clip(\n",
+        "                samples_X + radius_around_seeds_X,\n",
+        "                x_low,\n",
+        "                x_high,\n",
+        "            )\n",
+        "            X = seed_low + frac * seed_high\n",
         "\n",
+        "        else:\n",
+        "            # gaussian sample\n",
+        "            X = samples_X + radius_around_seeds_X * self.rng.rand(*samples_X.shape)\n",
+        "        y_clean = self._evaluate_polynomial(X)\n",
+        "        noise = self.rng.normal(loc=0.0, scale=self.noise_std, size=n_samples)\n",
+        "        y = y_clean + noise\n",
+        "        return X, y\n",
         "\n",
+        "    def draw_line(self, ax, num_points: int = 100, verbose: bool = False):\n",
+        "        if self.input_dim == 1:\n",
+        "            X = np.arange(num_points) / (num_points - 1)\n",
+        "            low, high = self.x_range\n",
+        "            range = high - low\n",
+        "            X = low + range * X\n",
+        "            y_clean = self._evaluate_polynomial(X)\n",
+        "            ax.plot(X, y, label=\"gt\")\n",
+        "        elif verbose:\n",
+        "            print(f\"line for {self.input_dim} not supported\")\n",
         "\n",
-        "def plot_polynomial_data(X: np.ndarray, y: np.ndarray, title: str = \"Synthetic Polynomial Data\"):\n",
+        "def plot_polynomial_data(X: np.ndarray, y: np.ndarray, label: str = \"\", title: str = \"Synthetic Polynomial Data\", ax=None):\n",
         "    \"\"\"\n",
         "    Plot synthetic polynomial data.\n",
         "\n",
@@ -156,27 +206,51 @@
         "\n",
         "    if X.shape[1] == 1:\n",
         "        # 2D scatter plot\n",
-        "        fig, ax = plt.subplots()\n",
-        "        ax.scatter(X[:, 0], y, alpha=0.7)\n",
+        "        if ax is None:\n",
+        "            fig, ax = plt.subplots()\n",
+        "        ax.scatter(X[:, 0], y, alpha=0.7, label=label)\n",
         "        ax.set_xlabel(\"x\")\n",
         "        ax.set_ylabel(\"y\")\n",
         "        ax.set_title(title)\n",
-        "        plt.show()\n",
+        "        # plt.show()\n",
         "\n",
         "    elif X.shape[1] == 2:\n",
         "        # 3D scatter plot\n",
-        "        fig = plt.figure()\n",
-        "        ax = fig.add_subplot(111, projection=\"3d\")\n",
-        "        ax.scatter(X[:, 0], X[:, 1], y, alpha=0.7)\n",
+        "        if ax is None:\n",
+        "            fig = plt.figure()\n",
+        "            ax = fig.add_subplot(111, projection=\"3d\")\n",
+        "        ax.scatter(X[:, 0], X[:, 1], y, alpha=0.7, label=label)\n",
         "        ax.set_xlabel(\"x1\")\n",
         "        ax.set_ylabel(\"x2\")\n",
         "        ax.set_zlabel(\"y\")\n",
         "        ax.set_title(title)\n",
-        "        plt.show()\n",
+        "        # plt.show()\n",
         "\n",
         "    else:\n",
-        "        raise ValueError(\"plot_polynomial_data only supports 1D or 2D inputs (input_dim 1 or 2).\")\n"
+        "        raise ValueError(\"plot_polynomial_data only supports 1D or 2D inputs (input_dim 1 or 2).\")\n",
+        "\n",
+        "\n",
+        "generator = RandomPolynomialDataGenerator()\n",
+        "x_random, y_random = generator.random_sample(100)\n",
+        "x_corr_line, y_corr_line = generator.correlated_sample(100, 5, linear=True)\n",
+        "x_corr_gauss, y_corr_gauss = generator.correlated_sample(100, 5, linear=False)\n",
+        "\n",
+        "fig, ax = plt.subplots()\n",
+        "generator.draw_line(ax)\n",
+        "plot_polynomial_data(x_random, y_random, label=\"random\", ax=ax)\n",
+        "plot_polynomial_data(x_corr_line, y_corr_line, label=\"corr_line\", ax=ax)\n",
+        "plot_polynomial_data(x_corr_gauss, y_corr_gauss, label=\"corr_gauss\", ax=ax)\n",
+        "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nkPgY4fckpo7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
