--- a/rl/policy_gradient.ipynb
+++ b/rl/policy_gradient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIIF4Kh9EdrvTm52Rjyeav",
+      "authorship_tag": "ABX9TyPHSb36zprsF9yHE3A+WqBS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -372,6 +372,64 @@
     {
       "cell_type": "code",
       "source": [
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "import numpy as np\n",
+        "\n",
+        "class Memory:\n",
+        "    def __init__(self, max_size: int = 1000):\n",
+        "        self.data = None\n",
+        "        self.max_size = max_size\n",
+        "\n",
+        "    def extend(self, item):\n",
+        "        if self.data is None:\n",
+        "            self.data = item\n",
+        "        else:\n",
+        "            self.data = jnp.concatenate((self.data, item))\n",
+        "        self.data = self.data[-self.max_size:]\n",
+        "\n",
+        "    def sample(self, batch_size: int = 4):\n",
+        "        indices = np.random.randint(0, len(self.data), batch_size)\n",
+        "        return jnp.array([self.data[idx] for idx in indices])\n",
+        "key = jax.random.PRNGKey(0)\n",
+        "key1, key2 = jax.random.split(key, 2)\n",
+        "\n",
+        "_memory = Memory(4)\n",
+        "x = jax.random.normal(key1, shape=(4, 5))\n",
+        "_memory.extend(x)\n",
+        "y = jax.random.normal(key2, shape=(4, 5))\n",
+        "_memory.extend(y)\n",
+        "\n",
+        "print(_memory.data)\n",
+        "print(_memory.sample(3))"
+      ],
+      "metadata": {
+        "id": "7V0e-8x1TbUH",
+        "outputId": "b0120879-d648-4916-f30c-09eb76a72f30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-2.4424558  -2.0356805   0.20554423 -0.3535502  -0.76197404]\n",
+            " [-1.1785518  -1.1482196   0.29716578 -1.3105359   2.1302025 ]\n",
+            " [-0.18957235  0.96401215 -1.3011001  -0.7486938  -0.3729984 ]\n",
+            " [ 0.4427907  -1.1902995  -0.06925564 -0.95605886 -1.9587638 ]]\n",
+            "[[-0.18957235  0.96401215 -1.3011001  -0.7486938  -0.3729984 ]\n",
+            " [-2.4424558  -2.0356805   0.20554423 -0.3535502  -0.76197404]\n",
+            " [-0.18957235  0.96401215 -1.3011001  -0.7486938  -0.3729984 ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title Policy gradients - REINFORCE\n",
         "\"\"\"\n",
         "J(\\theta) = \\mathbb{E}_{\\tau~\\pi}[reward(\\tau)]\n",
@@ -402,6 +460,7 @@
         "    n_layers: int = 1\n",
         "    lr: float = 1e-4\n",
         "\n",
+        "    replay_buffer_size = 128\n",
         "    ckpt_dir: str = '/tmp/checkpoints/'\n",
         "\n",
         "@struct.dataclass\n",
@@ -436,7 +495,7 @@
         "optimizer = nnx.Optimizer(policy_model, optax.adamw(params.lr), wrt=nnx.Param)\n",
         "ckpt_dir = ocp.test_utils.erase_and_create_empty(params.ckpt_dir)\n",
         "checkpointer = ocp.StandardCheckpointer()\n",
-        "\n",
+        "memory = Memory(params.replay_buffer_size)\n",
         "state = State(update_idx=0)\n",
         "\n",
         "\n",
@@ -451,6 +510,22 @@
         "    a_t_B: np.ndarray\n",
         "    r_t_B: np.ndarray\n",
         "    g_t_B: np.ndarray | None\n",
+        "\n",
+        "    def to_tensor(self):\n",
+        "        return jnp.concatenate(\n",
+        "            (self.s_t_BD, self.a_t_B.reshape(-1, 1), self.r_t_B.reshape(-1, 1), self.g_t_B.reshape(-1, 1)),\n",
+        "            axis=1,\n",
+        "        )\n",
+        "\n",
+        "    @classmethod\n",
+        "    def from_tensor(cls, tensor):\n",
+        "        Dp3 = tensor.shape[1]\n",
+        "        cls(\n",
+        "            s_t_BD=tensor[:, :Dp3-3],\n",
+        "            a_t_B=tensor[:, Dp3-3].astype(\"int32\"),\n",
+        "            r_t_B=tensor[:, Dp3-2],\n",
+        "            g_t_B=tensor[:, Dp3-1],\n",
+        "        )\n",
         "\n",
         "\n",
         "def compute_g(rewards: list[float], discount_rate: float) -> list[float]:\n",
@@ -506,8 +581,13 @@
         "\n",
         "for update_idx in range(params.num_training_episodes):\n",
         "    explore_p = params.explore_stop + (params.explore_start - params.explore_stop) * np.exp(-params.decay_rate * update_idx)\n",
-        "    batch = unroll(params, env, policy_model, explore_p)\n",
+        "    unrolled_batch = unroll(params, env, policy_model, explore_p)\n",
+        "    unrolled_batch_tensor = unrolled_batch.to_tensor()\n",
+        "    memory.extend(unrolled_batch_tensor)\n",
+        "    batch = Batch.from_tensor(memory.sample(unrolled_batch_tensor.shape[0]))\n",
+        "\n",
         "    # print(jax.tree.map(lambda x: x.shape, batch, is_leaf=lambda x: isinstance(x, np.ndarray)))\n",
+        "\n",
         "    def closure(model, rngs_for_closure):\n",
         "        batch_loss = batched_loss_fn(model, batch.s_t_BD, batch.a_t_B, batch.g_t_B)\n",
         "        return batch_loss.mean()\n",
